# IAIM-BETA-PROYECT

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
Backend/: .env.example  requirements.txt
Backend/API/: auth.py  database.py  logging_config.py  main.py  models.py  schemas.py  telegram_bot.py
Backend/API/routers/: __init__.py  tickets.py  users.py
Backend/Auth/Login/: login.py
Backend/Bot/: telegram_bot.py
Backend/Docs/: estructura.sql
Backend/scripts/: seed_admin.py
Frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Frontend/src/: App.jsx  config.js  index.css
Frontend/src/components/: DashboardLayout.jsx  LoginForm.jsx  StatsCard.jsx  TicketForm.jsx  TicketsTable.jsx  UsersTable.jsx
Frontend/src/hooks/: useAuth.jsx
Frontend/src/pages/: AdminDashboard.jsx  TechnicianDashboard.jsx
